force-app/main/default/objects/CourseBooking__c/CourseBooking__c.object-meta.xml
<CustomObject>
    <label>Course Booking</label>
    <nameField>
        <label>Booking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>