force-app/main/default/objects/CourseBooking__c/fields/BookingReference__c.field-meta.xml
<CustomField>
    <fullName>BookingReference__c</fullName>
    <label>Booking Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>