force-app/main/default/objects/CourseBooking__c/fields/DiscordUrl__c.field-meta.xml
<CustomField>
    <fullName>DiscordUrl__c</fullName>
    <formula>Scheduled_Course__r.DiscordUrl__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discord Url</label>
    <type>Text</type>
</CustomField>