force-app/main/default/objects/CourseBooking__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>DATEVALUE( Scheduled_Course__r.End_Date_Time__c ) - DATEVALUE( Scheduled_Course__r.Start_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>