force-app/main/default/objects/CourseBooking__c/fields/PaypalOrder__c.field-meta.xml
<CustomField>
    <fullName>PaypalOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paypal Order</label>
    <referenceTo>Paypal_Order__c</referenceTo>
    <relationshipLabel>Course Bookings</relationshipLabel>
    <relationshipName>Course_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>