force-app/main/default/objects/CourseBooking__c/fields/RazorpayPaymentLink__c.field-meta.xml
<CustomField>
    <fullName>RazorpayPaymentLink__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Razorpay Payment Link</label>
    <referenceTo>RazorpayPaymentLink__c</referenceTo>
    <relationshipLabel>Course Bookings</relationshipLabel>
    <relationshipName>Course_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>