force-app/main/default/objects/CourseBooking__c/fields/Scheduled_Course__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Course__c</fullName>
    <label>Scheduled Course</label>
    <referenceTo>ScheduledCourse__c</referenceTo>
    <relationshipName>Bookings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>